exports[`queue alarms custom overrides 1`] = `
{
  "Resources": {
    "QueueAlarmsApproximateAgeOfOldestMessageAlarmA7229608": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "my-queue has an oldest message older than 60 seconds",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Maximum",
        "Threshold": 60,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueAlarmsMessagesNotBeingDeleted13ECF351": {
      "Properties": {
        "AlarmDescription": "Service might be unavailable! It has available messages on the SQS queue, but these messages are not being deleted (processed).",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "NumberOfMessagesDeleted",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueAlarmsMessagesNotBeingProcessedAlarm0DD1C192": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "Service might be unavailable! It has available messages on the SQS queue, but these messages are not being deleted (processed).",
        "AlarmName": "StackQueueAlarmsMessagesNotBeingProcessedAlarm35B34DF6",
        "AlarmRule": {
          "Fn::Join": [
            "",
            [
              "(ALARM("",
              {
                "Fn::GetAtt": [
                  "QueueAlarmsMessagesVisibleAlarm147BDC1F",
                  "Arn",
                ],
              },
              "") AND ALARM("",
              {
                "Fn::GetAtt": [
                  "QueueAlarmsMessagesNotBeingDeleted13ECF351",
                  "Arn",
                ],
              },
              ""))",
            ],
          ],
        },
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "QueueAlarmsMessagesVisibleAlarm147BDC1F": {
      "Properties": {
        "AlarmDescription": "Service might be unavailable! It has available messages on the SQS queue, but these messages are not being deleted (processed).",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 60,
        "Statistic": "Minimum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueAlarmsTooManyMessagesExist500Alarm61A048ED": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "Custom alarm for too many messages",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 2,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 120,
        "Statistic": "Average",
        "Threshold": 500,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;

exports[`queue alarms default setup 1`] = `
{
  "Resources": {
    "QueueAlarmsApproximateAgeOfOldestMessageAlarmA7229608": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "my-queue has an oldest message older than 900 seconds",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 2,
        "MetricName": "ApproximateAgeOfOldestMessage",
        "Namespace": "AWS/SQS",
        "Period": 900,
        "Statistic": "Maximum",
        "Threshold": 900,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueAlarmsMessagesNotBeingDeleted13ECF351": {
      "Properties": {
        "AlarmDescription": "Service might be unavailable! It has available messages on the SQS queue, but these messages are not being deleted (processed).",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 4,
        "MetricName": "NumberOfMessagesDeleted",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueAlarmsMessagesNotBeingProcessedAlarm0DD1C192": {
      "Properties": {
        "ActionsEnabled": true,
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "Service might be unavailable! It has available messages on the SQS queue, but these messages are not being deleted (processed).",
        "AlarmName": "StackQueueAlarmsMessagesNotBeingProcessedAlarm35B34DF6",
        "AlarmRule": {
          "Fn::Join": [
            "",
            [
              "(ALARM("",
              {
                "Fn::GetAtt": [
                  "QueueAlarmsMessagesVisibleAlarm147BDC1F",
                  "Arn",
                ],
              },
              "") AND ALARM("",
              {
                "Fn::GetAtt": [
                  "QueueAlarmsMessagesNotBeingDeleted13ECF351",
                  "Arn",
                ],
              },
              ""))",
            ],
          ],
        },
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
      },
      "Type": "AWS::CloudWatch::CompositeAlarm",
    },
    "QueueAlarmsMessagesVisibleAlarm147BDC1F": {
      "Properties": {
        "AlarmDescription": "Service might be unavailable! It has available messages on the SQS queue, but these messages are not being deleted (processed).",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 2,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Minimum",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "QueueAlarmsTooManyMessagesExist1Alarm4678D080": {
      "Properties": {
        "AlarmActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "AlarmDescription": "my-queue has too many messages (>1)",
        "ComparisonOperator": "GreaterThanOrEqualToThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": "my-queue",
          },
        ],
        "EvaluationPeriods": 5,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "OKActions": [
          {
            "Fn::ImportValue": "SupportStack:ExportsOutputRefTopicBFC7AF6ECB4A357A",
          },
        ],
        "Period": 60,
        "Statistic": "Average",
        "Threshold": 1,
        "TreatMissingData": "ignore",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
  },
}
`;
